# wrapper-v2

./: .env.example  Dockerfile  README.md  compose.yaml
.github/workflows/: build.yml
src/daemon/: CMakeLists.txt  main.cpp  server.cpp  server.hpp
src/daemon/apple/: aarch64_sret_thunks.hpp  abi.hpp  auth.cpp  auth.hpp  decrypt.cpp  decrypt.hpp  loader.cpp  loader.hpp  playback.cpp  playback.hpp  runtime.cpp  runtime.hpp  tokens.cpp
src/launcher/: wrapper.c
tools/: extract-libs.sh
